# variant-effect-evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: eval.yaml
scripts/: bench_config.py  benchmark_job.py  config.py  eval_static_plots.py  orchestrate.py  utils.py
src/variant_effect_evaluation/: __init__.py  __main__.py  benchmark_job.py  cli.py  config.py  orchestrate.py  plots.py  utils.py
