[project]
name = "variant-effect-evaluation"
version = "0.1.0"
description = "Benchmark eval harness for the variant-effect-prediction model library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "variant-effect-prediction",
    "matplotlib>=3.10",
    "polars[all]>=1.41.0",
    "loguru>=0.7.3",
    "submitit>=1.5.4",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[tool.uv]
# Application project (scripts/, not an importable package) — nothing to build.
package = false
override-dependencies = ["nvidia-cudnn-cu13==9.21.1.3"]

# The library is consumed as a pinned git dependency. uv does NOT propagate a
# dependency's own [tool.uv.sources], and the library's model deps are git-only
# (not on PyPI), so they must be re-declared here verbatim for resolution to work.
[tool.uv.sources]
variant-effect-prediction = { git = "ssh://git@github.com/christian728504/variant-effect-prediction.git", rev = "255b00d900fe532743eb5ab122dba60df579554e" }
cherimoya = { git = "https://github.com/jmschrei/cherimoya.git", rev = "b7948c1ee6f648b05e50f52c098fcc5e4f0fede9" }
alphagenome-pytorch = { git = "https://github.com/genomicsxai/alphagenome-pytorch.git" }
borzoi-pytorch = { git = "https://github.com/johahi/borzoi-pytorch.git" }
enformer-pytorch = { git = "https://github.com/lucidrains/enformer-pytorch.git" }
bpnet-lite = { git = "https://github.com/jmschrei/bpnet-lite.git" }
memelite = { git = "https://github.com/jmschrei/memesuite-lite.git" }
